# PDF-translate

./: .gitignore  DEPLOY_WINDOWS_SERVER.md  PROJECT_DESIGN.md  README.md  SETUP_MANUAL.md  build_frontend.bat  pyproject.toml  requirements.txt  start_web.bat
docs/: 00-方向总览.md  01-开发者文档.md  02-更新规划.md  03-专利优化方向.md  04-竞品与技术边界.md  05-测试与验收指南.md  06-发布历史.md  07-版本更新状态.md  08-VLM-fallback任务清单.md
docs/决策记录/: ADR-0001-学术阅读工作台定位.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  auth.js  router.js  style.css
pdf_translate/: __main__.py  chunking.py  cli.py  config.py  continuation_extract.py  costing.py  deferral_markers.py  error_codes.py  experiments.py  export_filename.py  memory_store.py  pdf_structure.py  pipeline.py  pipeline_cancel.py  pipeline_merge.py  rich_content.py  run_metrics.py  structure_boundaries.py  survey.py  text_sanitize.py  zip_bundle.py
pdf_translate/chunkers/: __init__.py  structure.py
pdf_translate/exporters/: __init__.py  bilingual_html.py  translated_pdf.py
pdf_translate/qa/: __init__.py  (+9 more)
plans/: README.md  discussed-context.md  optimization-ocr.md  optimization-pdf-reflow.md  optimization-pipeline-future.md  optimization-server-architecture.md  optimization-toc-layout.md  optimization-web-ux-persistence.md  roadmap-next-steps.md
tests/: test_auth_deps.py  test_backend_registry.py  test_experiments.py  test_job_status.py  test_secret_store.py  test_security_preflight.py  test_structure_ir.py  test_web_upload_security.py  test_zip_bundle_security.py
参考/: AI美学（翻译版）.md  AI音乐（翻译版）.md
(+111 files in other folders)
